fixed the admin pages that had way too much margin left

--- a/src/admin/admin.scss
+++ b/src/admin/admin.scss
@@ -1,5 +1,5 @@
 .admin-page {
-  margin-left: 250px;
+  margin-left: 120px;
   margin-top: 80px;
   padding: 30px 40px;
   max-width: 1200px;
